fix bug for re-sizable icon z-index

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1480,7 +1480,6 @@ footer {
 	border: 1px solid #f58cdb;
 }
 
-
 .greyBar {
 	background-color: #aaa8a9;
 }
@@ -1525,6 +1524,10 @@ footer {
 
 .stickyContainer {
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.7);
+}
+
+.ui-resizable-handle.ui-resizable-se.ui-icon.ui-icon-gripsmall-diagonal-se {
+  z-index: 0 !important;
 }
 
 // ********** SETTINGS RULES ************
